--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <th> </th>
             <th>Minimum</th>
             <th>Normal</th>
-            <th>2 hours of eating</th>
+            <th>2 hours of Eating</th>
         </tr>
   <tr>
    <td>healthy</td>
